# de-homework-2026

./: .gitignore  README.md
dlt-workshop/: open_library_pipeline.py  pyproject.toml
module-1/: .gitignore  README.md  docker-compose.yaml  ingest_data.py  ingest_taxi_zone_lookup.py  pyproject.toml
module-1/terraform/: main.tf  variables.tf
module-3/: .gitignore  homework.sql  load_yellow_taxi_data.py  pyproject.toml
module-3/terraform/: .gitignore
module-4/: .gitignore
module-4/taxi_rides_ny/: .gitignore  CLAUDE.md  README.md  download_config.yml  download_data.py  pyproject.toml
module-4/taxi_rides_ny/models/staging/: schema.yml  sources.yml  stg_fhv_tripdata.sql
module-4/taxi_rides_ny/tests/: test_download_data.py
module-5/taxi-pipeline/: .gitignore
module-5/taxi-pipeline/pipeline/: pipeline.yml
module-5/taxi-pipeline/pipeline/assets/ingestion/: requirements.txt  trips.py
module-5/taxi-pipeline/pipeline/assets/reports/: trips_report.sql
module-5/taxi-pipeline/pipeline/assets/staging/: trips.sql
module-6/examples/: .gitignore  README.md  download_config.yml  download_data.py  pyproject.toml  test_spark.py
module-6/examples/notebooks/: 03_test_pyspark.ipynb  04_pyspark.ipynb  05_taxi_schema.ipynb
module-6/examples/notebooks/schemas/: fhvhv_tripdata.schema.json
module-6/examples/schemas/: green_tripdata.schema.json  yellow_tripdata.schema.json
taxi-pipeline/: pyproject.toml  taxi_pipeline.py
