[project]
name = "pipeline"
version = "0.1.0"
description = "Simple dockerized ETL pipeline"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "click>=8.3.1",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=22.0.0",
    "sqlalchemy>=2.0.45",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pandas-stubs>=2.3.3.251219",
]
